# NotebookLM_clone

./: .gitignore  README.md  app.py  milvus_lite_0a48aeac.db  milvus_lite_2c7e70c5.db  milvus_lite_698fbaf4.db  milvus_lite_702b22f9.db  milvus_lite_73b7abef.db  milvus_lite_7d912735.db  milvus_lite_87d523da.db  milvus_lite_88393119.db  milvus_lite_8a2c485d.db  milvus_lite_97f1993a.db  milvus_lite_9ae518fd.db  milvus_lite_ab200a45.db  milvus_lite_ad984920.db  milvus_lite_c3d1e9a3.db  milvus_lite_f162a67a.db  milvus_lite_fbdfdb46.db  milvus_lite_ff35fdce.db  pyproject.toml  requirements.txt
api/: __init__.py  config.py  main.py  models.py  sessions.py
api/routes/: __init__.py  chat.py  podcast.py  sources.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatTab.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  TabNavigation.tsx
frontend/src/components/sources/: FileUpload.tsx  SourcesList.tsx  SourcesTab.tsx  TextInput.tsx  UrlInput.tsx  YouTubeInput.tsx
frontend/src/context/: AppContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx  NotFound.tsx
frontend/src/types/: index.ts
src/audio_processing/: audio_transcriber.py  youtube_transcriber.py
src/document_processing/: doc_processor.py
src/embeddings/: embedding_generator.py
src/generation/: rag.py
src/memory/: memory_layer.py
src/podcast/: script_generator.py  text_to_speech.py
src/vector_database/: milvus_vector_db.py
src/web_scraping/: web_scraper.py
(+4 files in other folders)
