[project]
name = "KnowledgeCast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.44.3",
    "crewai[google-genai]>=0.193.2",
    "crewai-tools>=0.73.1",
    "fastembed>=0.7.3",
    "firecrawl-py>=4.3.6",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "kokoro>=0.9.4",
    "pymilvus[milvus-lite]>=2.6.2",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "soundfile>=0.12.1",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "yt-dlp>=2024.12.13",
    "zep-cloud>=3.4.3",
    "zep-crewai>=1.1.1",
    "pip>=25.3",
    "edge-tts>=7.2.3",
]
